--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3g -XX\:MaxMetaspaceSize\=768m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 kotlin.code.style=official
 
-jdkVersion=16
+jdkVersion=17
 projectVersion=0.1
 
-kotlinVersion=1.5.21
-kotlinCoroutineVersion=1.5.1
+kotlinVersion=1.6.10
+kotlinCoroutineVersion=1.6.0-RC3
 
-vertxVersion=4.1.3
+vertxVersion=4.2.2
 jacksonVersion=2.12.4
 
 springBootVersion=2.5.4
