--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 #Gradle properties
 #Tue Aug 10 17:12:25 CST 2021
-org.gradle.jvmargs=-Xmx3g -XX\:MaxMetaspaceSize\=768m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx3g -XX:MaxMetaspaceSize=768m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 kotlin.code.style=official
 
 jdkVersion=17
 projectVersion=0.1
 
-kotlinVersion=1.6.10
-kotlinCoroutineVersion=1.6.0-RC3
+kotlinVersion=1.7.10
+kotlinCoroutineVersion=1.6.4
 
-vertxVersion=4.2.2
-jacksonVersion=2.12.4
+vertxVersion=4.3.2
+jacksonVersion=2.13.3
 
 springBootVersion=2.5.4
