core spring update

--- a/easy-vertx-core-spring/src/test/resources/application.yml
+++ b/easy-vertx-core-spring/src/test/resources/application.yml
@@ -16,4 +16,7 @@ vertx:
       -
         class: maintest.vertxtest.MySpringVerticle
         deploymentOptions:
-           instances: 1
+          instances: 2
+
+aaa:
+  bbb: asf
