--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,5 @@
+jdk:
+  - openjdk17
 before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
-  - source install-jdk.sh --feature 17
-  - jshell --version
-#  - curl -s "https://get.sdkman.io" | bash
-#  - source "$HOME/.sdkman/bin/sdkman-init.sh"
-#  - sdk version
-#  - sdk install kotlin
-#  - kotlinc -version
+  - sdk install java 17.0.1-open
+  - sdk use java 17.0.1-open
